--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: Yeoh Yu Zhi
 email: yeoh.yuzhi@gmail.com
-url:
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+url: https://dhsyeohyuzhi.github.io/
+description: "My Personal Website"
 keywords: "your keywords, separated by commas"
 skills: "Science - Student- Stupid"
 meta_author: YuZhi Yeoh
