--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ disqus_shortname: myshortname
 color:
   primary: 2c3e50
   primary-rgb: "24,288,156" #"128,179,255"
-  secondary: 2c3e50 #FD6E8A
+  secondary: ffffff  #FD6E8A
   secondary-dark: 233140 #A2122F
 
 # Footer settings
@@ -41,7 +41,7 @@ footer:
 social:
   - title: github
     url: http://github.com/dhsyeohyuzhi
-    
+
 
 # Postal address (add as many lines as necessary)
 address:
