--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: yeoh.yuzhi@gmail.com
 url: https://dhsyeohyuzhi.github.io/
 description: "My Personal Website"
 keywords: "your keywords, separated by commas"
-skills: "Science - Student- Stupid"
+skills: "Dunman High - Student - Science"
 meta_author: YuZhi Yeoh
 
 # Google webmaster tools
