--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ disqus_shortname: myshortname
 color:
   primary: 2c3e50
   primary-rgb: "24,288,156" #"128,179,255"
-  secondary: ffffff  #FD6E8A
+  secondary: 2c3e50
   secondary-dark: 233140 #A2122F
 
 # Footer settings
